minitrace-macro/tests/ui/err/has-expr-argument.stderr
error: expected `enter_on_poll = <bool>`
 --> tests/ui/err/has-expr-argument.rs:3:9
  |
3 | #[trace(true)]
  |         ^^^^
